formulas not compiled

--- a/_sass/skins/_default.scss
+++ b/_sass/skins/_default.scss
@@ -5,10 +5,10 @@
 ///
 
 // main colors
-$main-color-1:     #fc4d50;
+$main-color-1:     #4267b2;
 $text-color-1:     #fff;
 
-$main-color-2:     #fca24d;
+$main-color-2:     #1da1f2;
 $text-color-2:     #fff;
 
 $main-color-3:     #f2f2f2;
@@ -71,4 +71,4 @@ $github-color:     #000;
 $npm-color:        #fff;
 
 // highlight colors
-@import "skins/highlight/tomorrow";
+@import "skins/highlight/tomorrow-night-eighties";
